# FragmentsSkill

./: .gitignore  README.md  nohup.out
Ebbinghaus-scheduler/: README.md  SKILL.md
Ebbinghaus-scheduler/scripts/: Ebbinghaus.py  test_ebbinghaus.py
OnPhone_Whisper_Widget/: OnPhone_Whisper_Widget.py  skills-lock.json
OnPhone_bilibili_obsidian/: SKILL.md
OnPhone_bilibili_obsidian/scripts/: get_history_byopus.py  get_obsidian_abstract_from_json.py
OnPhone_md_modifier/: README.md
OnPhone_md_modifier/scripts/: obsidian_modifier_nohop.sh  obsidian_search_file.sh  obsidian_search_tag.md  obsidian_viewfile.sh
OnPhone_obsidian_cli/: README.md  SKILL.md
OnPhone_obsidian_cli/evals/: evals.json
OnPhone_obsidian_cli/scripts/: cli_backlinks.py  cli_file_scanner.hpp  cli_main.cpp  cli_simple_index.hpp  cli_simple_parser.hpp  cli_vault_types.hpp  links_verify_remote_backlinks.py  obsidian.sh
OnPhone_task_manage/: README.md  SKILL.md  setup_task_manage.sh  start_task_manage_daemons.sh  stop_task_manage_daemons.sh
OnPhone_task_manage/ReviewHelperApp/: ReviewHelperApp.toml  pyproject.toml
OnPhone_task_manage/ReviewHelperApp/src/reviewhelperapp/: __init__.py  __main__.py  app.py  communication.py  notification_handler.py  review_interface.py
OnPhone_task_manage/ReviewHelperApp/src/reviewhelperapp/reviews/: __init__.py  simple_review.py
OnPhone_task_manage/docs/: review_pending.json  review_response.json  task.json
markdown-scheduler/: README.md
markdown-scheduler/scripts/: setup.py  (+1 more)
markdown-tag-parser/: SKILL.md
private-DBserver-access/: README.md  SKILL.md
(+18 files in other folders)
