[build-system]
requires = ["briefcase"]
build-backend = "briefcase.integrations.gradle.BriefcaseGradleBuildSystem"

[project]
name = "ReviewHelperApp"
version = "0.0.1"
description = "Helper app for Obsidian task review with notification-based interaction"
requires-python = ">=3.8"

[tool.briefcase.app.reviewhelperapp]
formal_name = "ReviewHelperApp"
description = "Helper app for Obsidian task review"
icon = "src/reviewhelperapp/resources/reviewhelperapp"
sources = ["src/reviewhelperapp"]
package = "reviewhelperapp"
