[build-system]
requires = ["briefcase"]
build-backend = "briefcase.integrations.gradle.BriefcaseGradleBuildSystem"

[tool.briefcase]
project_name = "ReviewHelperApp"
bundle = "com.obsidian.task"
app_name = "reviewhelperapp"
version = "0.0.1"
description = "Helper app for Obsidian task review"

[tool.briefcase.app.reviewhelperapp]
formal_name = "ReviewHelperApp"
sources = ["src/reviewhelperapp"]
icon = "src/reviewhelperapp/resources/reviewhelperapp"
license = "MIT"
requires = [
    "kivy>=2.2.0",
    "plyer>=2.1.0",
    "pyjnius>=1.5.0",
]